<resources>
    <string name="app_name">App_frontend</string>
    <string name="hello_tourist">Hello Tourist!</string>
    <string name="go">Send</string>
    <string name="exit">Exit</string>
    <string name="input">You can type here if im not mistaken..</string>
    <string name="please_log_in_to_your_account">Please log in to your account</string>
    <string name="email">Email:</string>
    <string name="password">Password:</string>
    <string name="username">Username:</string>
    <string name="login">Login</string>
    <string name="forgotPassword">Forgot password</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sing_up">Sing Up</string>
    <string name="send_password_to_email_address">Send Password to email address</string>
    <string name="please_provide_your_email_address">Please provide your email address</string>
    <string name="register">Register</string>
    <string name="password_again">Password again</string>
    <string name="profile">Profile</string>
    <string name="modify">Modify profile</string>
    <string name="startMenuOptions">Options</string>
    <string name="baranya">Baranya</string>
    <string name="back_to_start_menu">Back to start menu</string>
    <string name="spot">Spot</string>
    <string name="spot2">SPOT</string>
    <string name="password2">Password:</string>
    <string name="spot_name">Spot name</string>
    <string name="p_csi_bazilika">Pecsi Székesegyház </string>
    <string name="web">Web</string>
    <string name="web2">Web:</string>
    <string name="price">Price:</string>
    <string name="visited">Visited</string>
    <string name="average_rating">Average rating:</string>
    <string name="spotDescription">A pécsi Szent Péter- és Szent Pál-székesegyház a Pécsi egyházmegye katedrálisa, a város egyik jellegzetes épülete. A 11. századi alapokkal rendelkező székesegyház mai formáját a 19. század végén érte el Schmidt Frigyes tervei alapján. Orgonája Angster József 100. munkája.</string>
    <string name="url">https://pecsiegyhazmegye.hu/latnivalok/szekesegyhaz</string>
    <string name="currentPrice">2400Ft</string>
    <string name="currentAvgRating">4,5</string>
    <string name="rt_kel_s">Értékelés:</string>
    <string name="name">Név:</string>
    <string name="_4_5">4.5</string>
    <string name="nameDefValue">Baranya</string>
    <string name="templom">Templom</string>
    <string name="a_csal_dnak_tetszett_a_kir_ndul_s">A családnak tetszett a kirándulás.</string>
    <string name="_20_ft">20 Ft</string>
    <string name="your_profile">Your Profile</string>
    <string name="gipsz_jakab">Gipsz Jakab</string>
    <string name="gibszjakab_gmail_com">gibszjakab@gmail.com</string>
    <string name="adminadmin">adminadmin</string>
    <string name="role">Role</string>
    <string name="simpleuser">simpleUser</string>
    <string name="savechanges">SaveChanges</string>
    <string name="back">Back</string>
    <string name="recommended">Recommended!</string>
    <string name="notVisited">Not visited yet</string>
    <string name="visitNumberText">Visitors:</string>
    <string name="visitNumber">0</string>
    <string name="btRateText">Rate this place</string>
    <string name="rate">Rate this place</string>
    <string name="button_ok">Ok</string>
    <string name="button_cancel">Cancel</string>
    <string name="details">Detailed rating:</string>
    <string name="oneStarCount">0</string>
    <string name="twoStarCount">0</string>
    <string name="threeStarCount">0</string>
    <string name="fourStarCount">0</string>
    <string name="fiveStarCount">0</string>
    <string name="ownRating">Own rating:</string>
    <string name="ownStarCount">5</string>
    <string name="suggest">Make suggestion</string>
    <string name="suggestInstruction">Plase enter the name of a location you wish to see in out application:</string>
    <string name="enterLocationName">Type a name of a location</string>
</resources>