<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="17"
    android:background="@drawable/login_background"
    tools:context=".LoginFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_weight="4"
        android:layout_height="0dp"
        android:src = "@drawable/login_top">
    </ImageView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_margin="12dp"
        android:layout_marginVertical="0dp"
        android:layout_weight="7.5">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/font_login"
            android:textSize="20sp"
            android:text="@string/please_log_in_to_your_account" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/font_login"
            android:textSize="16sp"
            android:text="@string/username" />

        <EditText
            android:id="@+id/etUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLength="20"
            android:lines="1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/font_login"
            android:textSize="16sp"
            android:text="@string/email" />

        <EditText
            android:id="@+id/etEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLength="20"
            android:lines="1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/font_login"
            android:textSize="16sp"
            android:text="@string/password" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLength="20"
            android:lines="1"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"
                android:backgroundTint="@color/black"
                android:alpha="0.6"
                android:text="@string/login" />
            <Button
                android:id="@+id/btnSingUp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"
                android:backgroundTint="@color/black"
                android:alpha="0.6"
                android:text="@string/sing_up" />
            <Button
                android:id="@+id/btnForgotPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.8"
                android:backgroundTint="@color/black"
                android:alpha="0.6"
                android:text="@string/forgotPassword" />
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7"
        android:src = "@drawable/login_bottom">
    </ImageView>

</LinearLayout>