<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/background_blue2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".touristSpot">


    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:background="@drawable/background_blue3"/>
    </com.google.android.material.appbar.AppBarLayout>

<androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/rvTouristSpot"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="?attr/actionBarSize">

    <TextView
        android:id="@+id/tvTouristSpotName"
        android:layout_width="369dp"
        android:layout_height="87dp"
        android:layout_marginTop="4dp"
        android:ellipsize="end"
        android:fontFamily="@font/font_login"
        android:gravity="center"
        android:maxLength="30"
        android:maxLines="1"
        android:text="@string/p_csi_bazilika"
        android:textColor="@color/black"

        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/ivTouristSpot"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:src="@drawable/baranya"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="90dp" />

    <TextView
        android:id="@+id/tvTouristSpotNamesmall"
        android:layout_width="100dp"
        android:layout_height="75dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="5dp"
        android:ellipsize="end"
        android:fontFamily="@font/font_login"
        android:gravity="center"
        android:maxLength="10"
        android:maxLines="1"
        android:text="@string/web2"

        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivTouristSpot"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tvPrice"
        android:layout_width="102dp"
        android:layout_height="45dp"
        android:layout_marginStart="17dp"
        android:layout_marginEnd="5dp"
        android:ellipsize="end"
        android:fontFamily="@font/font_login"
        android:gravity="center"
        android:maxLength="10"
        android:maxLines="1"

        android:text="@string/price"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintEnd_toStartOf="@+id/textView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="419dp" />

    <TextView
        android:id="@+id/tvPrice2"
        android:layout_width="185dp"
        android:layout_height="45dp"
        android:layout_marginStart="17dp"
        android:layout_marginEnd="5dp"
        android:ellipsize="end"
        android:fontFamily="@font/font_login"
        android:gravity="center"
        android:maxLength="20"
        android:maxLines="1"

        android:text="Average rating:"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintEnd_toStartOf="@+id/textView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="464dp" />

    <TextView
        android:id="@+id/tvPrice3"
        android:layout_width="369dp"
        android:layout_height="91dp"
        android:layout_marginStart="17dp"
        android:layout_marginEnd="5dp"
        android:ellipsize="end"
        android:fontFamily="@font/font_login"
        android:gravity="center"
        android:maxLength="300"
        android:maxLines="4"


        tools:text="A pécsi Szent Péter- és Szent Pál-székesegyház a Pécsi egyházmegye katedrálisa, a város egyik jellegzetes épülete. A 11. századi alapokkal rendelkező székesegyház mai formáját a 19. század végén érte el Schmidt Frigyes tervei alapján. Orgonája Angster József 100. munkája."
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/textView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="509dp" />

    <TextView
        android:layout_width="270dp"
        android:layout_height="75dp"
        android:ellipsize="end"
        android:fontFamily="@font/font_login"
        android:gravity="center"
        android:maxLength="70"
        android:maxLines="2"
        android:textColor="@color/black"

        android:textSize="20sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="117dp"
        tools:layout_editor_absoluteY="344dp"
        tools:text="https://pecsiegyhazmegye.hu/latnivalok/szekesegyhaz" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="185dp"
        android:layout_height="45dp"
        android:fontFamily="@font/font_login"
        android:gravity="center"

        android:textColor="@color/black"
        android:textSize="20sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="202dp"
        tools:layout_editor_absoluteY="419dp"
        tools:text="2400Ft"


        />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="185dp"
        android:layout_height="45dp"
        android:fontFamily="@font/font_login"
        android:gravity="center"

        android:textColor="@color/black"
        android:textSize="20sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="202dp"
        tools:layout_editor_absoluteY="464dp"
        tools:text="4,5"
        />

    <Button
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="155dp"
        tools:layout_editor_absoluteY="603dp"
        android:text="@string/visited"
        android:textColor="@color/black"
        android:backgroundTint="@color/lightGreen"
        />

</androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>